[package]
name = "wasmcloud-provider-c2pa"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
async-trait = "0.1"
c2pa = { version = "0.16.0", features = ["file_io", "sign"] }
tempfile = "3.3.0"
tracing = "0.1.37"
wasmbus-rpc = "0.12"
wasmcloud-interface-c2pa = { path = "../c2pa-interface/rust" }

# test dependencies
[dev-dependencies]
wasmcloud-test-util = "0.6"
tokio = { version = "1", features = [ "full" ] }

[[bin]]
name = "c2pa_provider"
path = "src/main.rs"
